# Graffiti-Soul

./: .gitignore  CMakeLists.txt  MEMORY_MAP.md  README.md  TESTING.md  build.sh  kb.json
docs/: function_template.cpp  kb.json  memory_map.md
include/: types.h
src/: main.cpp
tools/: ExtractDecompiledFunctions.py  patch.py
